MDEV-33289 INTERVAL partitioning by system time does not work close to the end of timestamp range

1. Fix empty part_elem->id in prep_alter_part_table().

   On auto-create newly added partition has id 0. It came from
   set_up_default_partitions() for new part_info
   (thd->work_part_info). vers_update_el_ids() can work only with
   unassigned ids (UINT_MAX32), so we assign it explicitly on pushing
   into tab_part_info.

2. If range value is out of TIMESTAMP_MAX_VALUE set it to
   TIMESTAMP_MAX_VALUE, but only if the history partition is the last
   one, otherwise push ER_DATA_OUT_OF_RANGE. Error is to create
   multiple out-of-range partitions (e.g. with PARTITIONS clause in
   CREATE TABLE).